--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
     </div>
 
     <div class='col-md-8' ng-view>
+        
     </div>
 
     <div class='col-md-2 sidebar' ng-controller="RightSidebarController">
@@ -50,12 +51,20 @@
 <script src="js/services/adsServices.js"></script>
 <script src="js/services/authService.js"></script>
 <script src="js/services/notifyService.js"></script>
+<script src="js/services/categoriesService.js"></script>
+<script src="js/services/pageService.js"></script>
+<script src="js/services/townsService.js"></script>
+<script src="js/services/userService.js"></script>
 
 <script src="js/controllers/AppController.js"></script>
 <script src="js/controllers/HomeController.js"></script>
 <script src="js/controllers/RightSidebarController.js"></script>
 <script src="js/controllers/LoginController.js"></script>
 <script src="js/controllers/RegisterController.js"></script>
+<script src="js/controllers/UserController.js"></script>
+<script src="js/controllers/PublishController.js"></script>
+<script src="js/controllers/UserProfileController.js"></script>
+<script src="js/controllers/MainController.js"></script>
 
 </body>
 
