Added ads editing via controller. Working

--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
 <script src="js/controllers/UserProfileController.js"></script>
 <script src="js/controllers/MainController.js"></script>
 <script src="js/controllers/DeleteAdController.js"></script>
+<script src="js/controllers/EditAdController.js"></script>
 
 </body>
 
